--- a/SPAJumpStart/SPAJumpStart.csproj
+++ b/SPAJumpStart/SPAJumpStart.csproj
@@ -149,6 +149,7 @@
     <Content Include="App\durandal\widget.js" />
     <Content Include="App\main.js" />
     <Content Include="App\services\breeze.partial-entities.js" />
+    <Content Include="App\services\dump.js" />
     <Content Include="App\services\datacontext.js" />
     <Content Include="App\services\logger.js" />
     <Content Include="App\services\model.js" />
